// Copyright 2019 SolarNetwork Foundation.
// Copyright 2021 Ecogy Energy.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package api.esi;

option go_package = "github.com/elijahjpassmore/api/esi";

/**
 * Request criteria for datum.
 */
message FormSetting {

  // Enumeration of possible form setting types.
  // None is 0 to keep data through transit.
  enum FormSettingType {
    NONE = 0;
    INFO = 1;
    TEXT = 2;
    SECURE_TEXT = 3;
  }

  // The type of setting.
  FormSettingType type = 1;

  // A key, unique to the containing form, that identifies this setting.
  string key = 2;

  // A human-friendly display name for this setting.
  string label = 3;

  // An optional human-friendly caption to show along with the setting field.
  string caption = 4;

  // An optional human-friendly placeholder value to show along with the setting field.
  string placeholder = 5;

}
